# roi_viewpoint_planner

./: CMakeLists.txt  README.md  package.xml
cfg/: Evaluator.cfg  Planner.cfg  generate_plots.py  generate_roi_yaml.py  gt_w11.yaml  gt_w14.yaml  gt_w16.yaml  world12_plants.yaml  world13_plants.yaml  world16_plants.yaml  world17_plants.yaml  world18_plants.yaml
cfg/plant_files/: .gitignore  VG07_6_fruits.wrl  VG07_6_fruits_0.005.bt  VG07_6_fruits_0.01.bt  VG07_6_fruits_0.02.bt  VG07_6_rois.yaml  generate_octrees.sh  howto_generate_trees.md
cfg/plant_files/VG07_6/: VG07_6.wrl  VG07_6_0.005.bt  VG07_6_0.01.bt  VG07_6_0.02.bt
cfg/plant_files/VG07_6_more_occ/: VG07_6_more_occ.wrl  VG07_6_more_occ_0.005.bt  VG07_6_more_occ_0.01.bt  VG07_6_more_occ_0.02.bt
cfg/plant_files/VG07_6_no_fruits/: VG07_6_no_fruits.wrl  VG07_6_no_fruits_0.005.bt  VG07_6_no_fruits_0.01.bt  VG07_6_no_fruits_0.02.bt
cfg/plant_files/VG07_6_one_fruit/: VG07_6_one_fruit.wrl  VG07_6_one_fruit_0.005.bt  VG07_6_one_fruit_0.01.bt  VG07_6_one_fruit_0.02.bt
cfg/plant_files/individual_fruits/VG07_6/: VG07_6_fruit_1.wrl  VG07_6_fruit_2.wrl  VG07_6_fruit_3.wrl  VG07_6_fruit_4.wrl  VG07_6_fruit_5.wrl  VG07_6_fruit_6.wrl  VG07_6_fruit_7.wrl
cfg/plant_files/individual_fruits/VG07_6/0.005/: VG07_6_fruit_1_0.005.bt  VG07_6_fruit_2_0.005.bt  VG07_6_fruit_3_0.005.bt  VG07_6_fruit_4_0.005.bt  VG07_6_fruit_5_0.005.bt  VG07_6_fruit_6_0.005.bt  VG07_6_fruit_7_0.005.bt
cfg/plant_files/individual_fruits/VG07_6/0.01/: VG07_6_fruit_1_0.01.bt  VG07_6_fruit_2_0.01.bt  VG07_6_fruit_3_0.01.bt  VG07_6_fruit_4_0.01.bt  VG07_6_fruit_5_0.01.bt  VG07_6_fruit_6_0.01.bt  VG07_6_fruit_7_0.01.bt
cfg/plant_files/individual_fruits/VG07_6/0.02/: VG07_6_fruit_1_0.02.bt  VG07_6_fruit_2_0.02.bt  VG07_6_fruit_3_0.02.bt  VG07_6_fruit_4_0.02.bt  VG07_6_fruit_5_0.02.bt  VG07_6_fruit_6_0.02.bt  VG07_6_fruit_7_0.02.bt
cfg/world_gt_octrees/: gt_tree_world11_0.005.bt  gt_tree_world11_0.01.bt  gt_tree_world11_0.02.bt  gt_tree_world12_0.005.bt  gt_tree_world12_0.01.bt  gt_tree_world12_0.02.bt  gt_tree_world13_0.005.bt  gt_tree_world13_0.01.bt  gt_tree_world13_0.02.bt  gt_tree_world14_0.005.bt  gt_tree_world14_0.01.bt  gt_tree_world14_0.02.bt  gt_tree_world16_0.005.bt  gt_tree_world16_0.01.bt  gt_tree_world16_0.02.bt  gt_tree_world17_0.005.bt  gt_tree_world17_0.01.bt  gt_tree_world17_0.02.bt  gt_tree_world18_0.005.bt  gt_tree_world18_0.01.bt  gt_tree_world18_0.02.bt  gt_tree_world19_0.005.bt  gt_tree_world19_0.01.bt  gt_tree_world19_0.02.bt  gt_tree_world19_more_occ_0.005.bt  gt_tree_world19_more_occ_0.01.bt  gt_tree_world19_more_occ_0.02.bt  gt_tree_world20_0.005.bt  gt_tree_world20_0.01.bt  gt_tree_world20_0.02.bt  gt_tree_world21_0.005.bt  gt_tree_world21_0.01.bt  gt_tree_world21_0.02.bt
cfg/world_plant_locations/: m2s_test_plants.yaml  world11_plants.yaml  world14_plants.yaml  world19_more_occ_plants.yaml  world19_plants.yaml  world20_plants.yaml  world21_plants.yaml
cfg/world_roi_gts/: world11_roi_gt.yaml  world12_roi_gt.yaml  world13_roi_gt.yaml  world17_roi_gt.yaml  world18_roi_gt.yaml  world19_more_occ_roi_gt.yaml  world19_roi_gt.yaml  world20_roi_gt.yaml  world21_roi_gt.yaml
include/: compute_cubes.h  evaluator.h  gt_octree_loader.h  planner_interface.h  point_cloud_color_handler_clusters.h  rvp_types.h  rvp_utils.h  sample.h  time_logger.h  viewpoint_planner.h  viewpoint_samplers.h  viewpoint_utilities.h
include/planner_interfaces/: direct_planner_interface.h  external_planner_interface.h  saved_tree_interface.h
include/roi_viewpoint_planner/: compute_cubes.h  earcut.hpp  evaluator.h  evaluator_external_clusters.h  gt_octree_loader.h  planner_interface.h  random_point_generator.h  rvp_types.h  rvp_utils.h  trolley_remote.h  viewpoint_planner.h  viewpoint_samplers.h  viewpoint_utilities.h
include/roi_viewpoint_planner/motion_manager/: direct_point_motion.h  motion_manager_base.h  robot_manager.h
include/roi_viewpoint_planner/octree_provider_interfaces/: direct_planner_interface.h
include/roi_viewpoint_planner/planner_interfaces/: direct_planner_interface.h  external_planner_interface.h  provided_tree_interface.h  saved_tree_interface.h
msg/: PlannerState.msg  PlanningTimes.msg
src/: evaluate_external_clusters_node.cpp  evaluate_planner.cpp  evaluate_planner_standalone.cpp  evaluate_rosbag_no_gt.cpp  evaluate_saved_tree.cpp  evaluator.cpp  evaluator_external_clusters.cpp  generate_color_octree.cpp  generate_gt_octree.cpp  gt_octree_loader.cpp  planner_node.cpp  publish_octree.cpp  test_random_point_generator.cpp  trolley_remote.cpp  viewpoint_planner.cpp  viewpoint_samplers.cpp  viewpoint_utilities.cpp  workspace_publisher.cpp
src/motion_manager/: direct_point_motion.cpp  robot_manager.cpp
src/octree_provider_interfaces/: direct_planner_interface.cpp
src/planner_interfaces/: direct_planner_interface.cpp  external_planner_interface.cpp  provided_tree_interface.cpp  saved_tree_interface.cpp
srv/: ChangePlannerMode.srv
